hphp/hack/test/typecheck/unbound_name/smethod_id.php.exp
File "smethod_id.php", line 13, characters 3-10:
Unbound name: `NotFound` (an object type) (Naming[2049])
File "smethod_id.php", line 16, characters 3-10:
Unbound name: `NotFound` (an object type) (Naming[2049])
